Refactor 'api' module